Changes to be committed: 	modified:   lib/screens/quiz_page.dart 	new file:   lib/screens/score_screen.dart 	modified:   macos/Flutter/GeneratedPluginRegistrant.swift 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   path_provider: ^2.1.1   # Faylları telefonda saxlamaq üçün
   shared_preferences: ^2.2.2 # Hash və Broadcast ID saxlamaq üçün
   crypto: ^3.0.3          # (Opsional) Hash yoxlaması üçün lazımdırsa
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
