--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/images/app_icon.png" # Çevirdiyin PNG faylı
+  # Android üçün adaptiv ikon tənzimləmələri
+  adaptive_icon_background: "#5DA9E9" # Sənin SVG-dəki üst gradient rəngi
+  adaptive_icon_foreground: "assets/images/app_icon.png"
 
 flutter:
   uses-material-design: true
